# hoard

./: Cargo.toml  LICENSE  README.md  build.rs  dev-config.yaml  smoke-test.sh
src/: archive_utils.rs  cli.rs  config.rs  dev_utils.rs  error.rs  fs_utils.rs  hash_utils.rs  lib.rs  main.rs  manager.rs  sql_utils.rs  sync_db.rs
src/db/: functions.rs  migrations.rs  mod.rs
src/db/sql/: init-schema.sql
src/db/sql/migrations/: 0001-init.sql
src/db/types/: collection.rs  disk.rs  file.rs  mod.rs  timestamp.rs
src/test_utils/: fixtures.rs
