[package]
name = "hoard"
version = "0.1.0-alpha1"
edition = "2021"
publish = false

[[bin]]
name = "hoard"
path = "./src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "simplelog", "cli-table"]

[dependencies]
anyhow = "^1.0.57"
block-utils = "^0.10.7"
chrono = "^0.4.19"
clap = { version = "^3.1.15", features = ["derive"] , optional = true }
cli-table = { version = "^0.4.7", optional = true }
digest = "^0.10.3"
directories = "^4.0.1"
flate2 = "^1.0.23"
hex = "^0.4.3"
include_dir = "^0.7.2"
lazy_static = "^1.4.0"
log = "^0.4.17"
nix = { version = "^0.24.1", default-features = false, features = ["fs"] }
rand = "^0.8.5"
regex = "^1.5.5"
# crates.io version depends on uuid v0.8.x and cause compilation errors,
# but the version on `master` has been bumped already
# rusqlite = { version = "^0.27.0", default-features = false, features = ["chrono", "uuid"] }
rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", default-features = false, features = ["chrono", "functions", "uuid"] }
rust-lzma = "^0.5.1"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8.24"
sha1 = "^0.10.1"
sha2 = "^0.10.2"
sha3 = "^0.10.1"
simplelog = { version = "^0.12.0", optional = true }
tar = "^0.4.38"
uuid = { version = "^1.0", features = ["serde", "v4"] }
zip = "^0.6.2"
zstd = "^0.10.2"

[dev-dependencies]
env_logger = "^0.9.0"
maplit = "^1.0.2"
tempfile = "^3.3.0"
test-log = "^0.2.10"
